tests/baselines/reference/unusedPrivateVariableInClass2.errors.txt
tests/cases/compiler/unusedPrivateVariableInClass2.ts(3,5): error TS6132: Variable 'x' has never been used.
tests/cases/compiler/unusedPrivateVariableInClass2.ts(4,5): error TS6132: Variable 'y' has never been used.


==== tests/cases/compiler/unusedPrivateVariableInClass2.ts (2 errors) ====
    
    class greeter {
        private x: string;
        ~~~~~~~~~~~~~~~~~~
!!! error TS6132: Variable 'x' has never been used.
        private y: string;
        ~~~~~~~~~~~~~~~~~~
!!! error TS6132: Variable 'y' has never been used.
    }